--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Scratchpage - My Hobby Passion</title>
-    <link rel="stylesheet" href="../css/scratchwrite.css"/>
+    <link rel="stylesheet" href="../root/css/scratchwrite.css"/>
 </head>
 <body>
     <div id="top" class="header"> 
@@ -16,8 +16,8 @@
     </div>
    
     <h2>My True Hobby</h2>
-    <img src="../root/assets/img/dylanportrait.JPG" style="width: 200px;"> 
-    <img src="../root/assets/img/familyportlarge.jpeg" style="width: 200px;"> 
+    <img src="../assets/img/dylanportrait.JPG" style="width: 200px;"> 
+    <img src="../assets/img/familyportlarge.jpeg" style="width: 200px;"> 
     <h3>Becoming an Instagram Influencer</h3>
    
     <p>I think this is a critial step in today's life, especially in one's career. I have heard it be said, "If you are a cool person in real life then you will be a cool person online. If you are bad then you will be bad." That helped me to see that I can use social media to attract the people I enjoy being around and who want to see me succeed. It is like taking what I am doing right now and presenting it to more people, which means MORE connections!</p>
